src/converters/pip/snapshots/migrate_to_uv__converters__pip__tests__perform_pip_tools_all_files_migration.snap
---
source: src/converters/pip/mod.rs
expression: "perform_migration(Path::new(\"tests/fixtures/pip_tools/full\"),\nvec![\"requirements.in\".to_string()],\nvec![\"requirements-dev.in\".to_string(), \"requirements-typing.in\".to_string()],\nPath::new(\"tests/fixtures/pip_tools/full/pyproject.toml\"),)"
---
'''
[project]
name = ""
version = "0.0.1"
dependencies = [
    "arrow",
    "httpx[cli,zstd]==0.28.1",
    "uvicorn @ git+https://github.com/encode/uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff==0.8.4",
    "mypy==1.14.1",
    "types-jsonschema==4.23.0.20241208",
]

[tool.uv]
package = false
'''
