src/converters/pip/snapshots/migrate_to_uv__converters__pip__tests__perform_pip_tools_migration.snap
---
source: src/converters/pip/mod.rs
expression: pip_tools.perform_migration(true)
---
'''
[project]
name = ""
version = "0.0.1"
dependencies = [
    "arrow",
    "httpx[cli,zstd]==0.28.1",
    "uvicorn @ git+https://github.com/encode/uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff==0.8.4",
]

[tool.uv]
package = false
'''
