src/converters/pip/snapshots/migrate_to_uv__converters__pip__tests__perform_pip_tools_with_lock_file.snap
---
source: src/converters/pip/mod.rs
expression: pip_tools.perform_migration(false)
---
'''
[project]
name = ""
version = "0.0.1"
dependencies = ["arrow==1.2.3"]

[dependency-groups]
dev = [
    "factory-boy==3.2.1",
    "mypy==1.13.0",
]

[tool.uv]
package = false
constraint-dependencies = [
    "arrow==1.2.3",
    "python-dateutil==2.7.0",
    "six==1.15.0",
    "factory-boy==3.2.1",
    "faker==33.1.0",
    "python-dateutil==2.7.0",
    "six==1.15.0",
    "typing-extensions==4.6.0",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "typing-extensions==4.6.0",
]
'''
